created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -16,6 +16,7 @@
 	<nav>
 		<a href="#">Instructions</a>
 		<a href="#">Game</a>
+		<button onclick="resetTheGame()"> click here to try again!</button>
 	</nav>
 
 	<main>
