added jquery effects

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -33,7 +33,15 @@
 		<p class="message">Created with &hearts; by <span class="name">GA</span>
 		</p>
 	</footer>
+<script src="js/jquery.js"></script>
+
 <script src="js/main.js"></script>
+
+<script> 
+	
+
+</script>
+
 
 </body>
 </html> 
